--- a/dev-jsf/pom.xml
+++ b/dev-jsf/pom.xml
@@ -39,11 +39,11 @@
 			<version>2.2.0</version>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-annotations</artifactId>
 			<version>3.5.6-Final</version>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
