--- a/dev-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/dev-jsf/src/main/webapp/WEB-INF/web.xml
@@ -6,34 +6,26 @@
 
 	<display-name>Archetype Created Web Application</display-name>
 
-	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config>
-
-	<resource-env-ref>
-		<!-- Enable Weld CDI, also needs META-INF/context.xml entry -->
-		<resource-env-ref-name>BeanManager</resource-env-ref-name>
-		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
-	</resource-env-ref>
-
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
-
+	<welcome-file-list>
+		<welcome-file>index.xhtml</welcome-file>
+	</welcome-file-list>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-
-	<welcome-file-list>
-		<welcome-file>faces/index.xhtml</welcome-file>
-	</welcome-file-list>
+	<context-param>
+		<description>State saving method: 'client' or 'server' (=default). See JSF Specification 2.5.2</description>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>client</param-value>
+	</context-param>
 
 </web-app>
